# Document-Dash

./: .env  .gitignore  README.md  chromy.py  llmservice.py  main.py  pyproject.toml  qna.py  schema.py  upload.py
chroma_db/: chroma.sqlite3
